--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "name": "week-8.1",
     "version": "1.0.0",
     "main": "index.js",
-    "devDependencies": {},
+    "devDependencies": {
+
+    },
     "scripts": {
+        "start": "node server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "hammaddii",
